[gd_scene load_steps=7 format=3 uid="uid://cypvrm0pj87tt"]

[ext_resource type="Texture2D" uid="uid://d0dkwutc528tj" path="res://assets/Objects/Basic_Grass_Biom_things.png" id="1_2gsj5"]
[ext_resource type="Script" path="res://scripts/tree.gd" id="1_vy0na"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u6axi"]
atlas = ExtResource("1_2gsj5")
region = Rect2(16, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fcrq"]
atlas = ExtResource("1_2gsj5")
region = Rect2(48, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_md6kc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6axi")
}],
"loop": true,
"name": &"empty",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fcrq")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d6mce"]
radius = 28.0

[node name="Tree" type="Node2D"]
script = ExtResource("1_vy0na")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_md6kc")
animation = &"full"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, -9)
scale = Vector2(0.971, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-1, 9)
scale = Vector2(0.715425, 0.692714)
shape = SubResource("CircleShape2D_d6mce")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -34.0
offset_right = 116.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.00141, 1.00587)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 8
text = "Appuyer sur E 
pour ramasser"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarkerApple3" type="Marker2D" parent="."]
position = Vector2(6, -4)

[node name="MarkerApple2" type="Marker2D" parent="."]
position = Vector2(-7, -1)

[node name="MarkerApple1" type="Marker2D" parent="."]
position = Vector2(3, 6)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
